--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Mateusz Bak",
   "license": "MIT",
   "dependencies": {
+    "@pixi/sound": "^5.0.0",
     "gsap": "^3.11.3",
     "pixi.js": "~7.0.4"
   },
