--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
   "dependencies": {
     "@pixi/sound": "^5.0.0",
     "gsap": "^3.11.3",
+    "parcel": "^2.8.0",
     "pixi.js": "~7.0.4"
   },
   "devDependencies": {
+    "@parcel/resolver-glob": "^2.8.0",
+    "@parcel/transformer-sass": "^2.8.0",
     "@types/pixi.js": "^5.0.0",
     "babel-preset-es2015": "~6.24.1",
     "http-server": "~14.1.1",
-    "parcel-bundler": "~1.12.4",
     "rimraf": "~3.0.2",
     "sass": "^1.56.1",
     "typescript": "~4.9.3"
