--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@types/pixi.js": "^5.0.0",
     "babel-preset-es2015": "~6.24.1",
     "http-server": "~14.1.1",
+    "punycode": "^1.4.1",
+    "querystring-es3": "^0.2.1",
     "rimraf": "~3.0.2",
     "sass": "^1.56.1",
     "typescript": "~4.9.3"
